Migrate codebase to Java 9 compatibility